# cluaizd

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cluaizd.toml
active_dnas/: README.md
apps/: README.md
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs
apps/cli/src/commands/: README.md  config.rs  db_ops.rs  dna.rs  health.rs  inspect.rs  mod.rs  query.rs  server.rs  wal_ops.rs
apps/cli/src/engine/: README.md  ffi_bridge.rs  mod.rs
apps/cli/src/utils/: README.md  printer.rs
apps/gui/: README.md  package-lock.json  package.json
apps/gui/src/: App.css  App.tsx  index.css  types.d.ts
components/: README.md
components/cluaizd-common/: Cargo.toml  README.md
components/cluaizd-common/src/: lib.rs
components/cluaizd-errors/: Cargo.toml  README.md
components/cluaizd-errors/src/: lib.rs  storage_error.rs  vector_error.rs
components/cluaizd-types/: Cargo.toml  README.md
components/cluaizd-types/src/: distance.rs  lib.rs  neuron.rs  neuron_id.rs  (+1 more)
components/cnsdb-common/: Cargo.toml
components/cnsdb-errors/: Cargo.toml
components/cnsdb-types/: Cargo.toml
components/cnsdb-types/src/: lib.rs  neuron.rs
crates/: README.md
crates/genome/: Cargo.toml  README.md
crates/genome/src/: auto_compiler.rs  crispr.rs  executor.rs  lib.rs  registry.rs  wasm_executor.rs
crates/genome/src/cdql/: eval.rs  mod.rs  parser.rs  planner.rs
crates/genome/src/cnql/: mod.rs  parser.rs  planner.rs
crates/heart/: Cargo.toml  README.md
crates/server/: Cargo.toml  README.md
crates/server/src/: config.rs  dreamer.rs  main.rs
crates/server/src/routes/: booster.rs  crispr.rs  dna.rs  graph.rs  juju.rs  media.rs  mod.rs  query.rs  read.rs  shard_manager.rs  shard_manager_tests.rs  state.rs  stream.rs  transit.rs  validate.rs  write.rs  ws.rs
crates/storage/engine-lmdb/: Cargo.toml
crates/storage/engine-lmdb/src/: env.rs  ffi.rs  gc.rs  lib.rs  manifest.rs  reader.rs  sandbox.rs  sensory_shard.rs  transit.rs  writer.rs
crates/storage/wal/: Cargo.toml
crates/storage/wal/src/: lib.rs  log_entry.rs  wal_recovery.rs  wal_writer.rs
dnas/: README.md
dnas/base_document/: Cargo.toml
dnas/base_graph/: Cargo.toml
dnas/base_sql/: Cargo.toml
dnas/base_vector/: Cargo.toml
docs/: README.md  registry.json
docs/api/: booster.md  crispr.md  ingest-stream.md  juju.md  sandbox-validate.md  websocket.md
docs/architecture/: bits-to-atoms.md  concurrency-serialization.md  core-engines.md  crash-recovery.md  dreamer-engine.md  ffi-bypass.md  genome-hooks.md  lmdb-zero-copy.md  sensory-shards.md  wal-internals.md
docs/cdql/: advanced-pipelines.md  hybrid-pipelines.md  performance-tuning.md  rosetta-stone.md
docs/clients/: c-ffi.md  rest-api.md
docs/cluaizd-dna-templates/: README.md  auto_wasm_example.rs  cdql_example.md  json_rules.json  serialization_formats.md
docs/cluaizd-types/: 01-key-value.md  02-graph.md  03-document.md  04-relational.md  05-vector-ai.md  06-time-series.md  07-geo-spatial.md  08-wide-column.md  09-full-text-search.md  10-blob-object.md  11-multi-model.md  12-hierarchical.md  13-network.md  14-object-oriented.md  15-columnar.md  16-in-memory.md  17-ledger-blockchain.md  18-spatial-geographic.md  19-event-sourcing.md  20-autonomous.md  21-newsql.md  22-streaming-reactive.md  23-temporal.md  24-array-tensor.md  25-federated-virtual.md  26-multivalued.md  27-native-xml.md  28-spatial-temporal.md  29-graph-relational.md  30-embedded-in-process.md
docs/cnql/: advanced-pipelines.md  hybrid-pipelines.md  performance-tuning.md  rosetta-stone.md
docs/deployment/: bare-metal.md  config-reference.md  docker.md
docs/genomes/: auto-wasm-guide.md  blob-storage.md  dna-architecture.md  document-nosql.md  full-text-search.md  geospatial.md  graph-network.md  key-value.md  relational-sql.md  supported-dnas.md  time-series.md  vector-ai.md  wide-column.md
docs/get-started/: THE_MASTER_PATH.md  build-a-todo-app.md  installation.md  introduction.md  quickstart.md  skill.md  the_9_paradigms_cookbook.md  understanding_the_pulse.md  your_first_mutating_db.md
docs/query-language/: cdql-intro.md  cnql-intro.md  parameterized_queries.md  syntax-reference.md
docs/reference/: api_index.md  cdql_index.md  config_index.md  dictionary.md  dna_index.md  index.md  types_index.md
docs/vision/: for-ai-agents.md  why-cluaizd.md  why-cnsdb.md
ffi/: Cargo.toml  README.md  cluaizd.h  cnsdb.h
ffi/src/: lib.rs
genomes/: README.md  array_tensor.json  autonomous.json  columnar.json  document_store.json  embedded.json  ephemeral_cache.json  event_sourcing.json  federated_virtual.json  geospatial.json  graph_network.json  graph_relational.json  hierarchical.json  key_value.json  ledger_blockchain.json  multi_model.json  multivalued.json  native_xml.json  network.json  newsql.json  object_oriented.json  object_store.json  search_index.json  sensory_stream.json  spatial_geographic.json  spatial_temporal.json  sql_strict.json  temporal.json  time_series.json  vector_space.json  wide_column.json
tests/: README.md
tests/api/: Cargo.toml  README.md
tests/apps/: Cargo.toml  README.md
tests/benchmarks/: Cargo.toml  README.md
tests/benchmarks/benches/: core_benchmarks.rs
tests/benchmarks/src/: lib.rs
tests/chaos/: Cargo.toml  README.md  test_result.md
tests/chaos/src/: lib.rs
tests/chaos/tests/: test_acid.rs  test_concurrency.rs
tests/chaos/tests/common/: logger.rs  mod.rs
tests/fuzz/: Cargo.toml  README.md
tests/integration/: Cargo.toml  README.md  test_result.md
tests/integration/src/: lib.rs
tests/integration/tests/: test_cdql.rs  test_cdql_parser.rs  test_endpoints.rs  test_graph.rs  test_policy_compliance.rs  test_raft.rs  test_time_series.rs  test_vector_search.rs
tests/migration/: Cargo.toml  README.md
tests/qa/: Cargo.toml
tests/quality/: Cargo.toml  README.md
tests/quality/src/: lib.rs
tests/quality/tests/: cdql_search_mechanics.rs  test_qa.rs
tests/quality/tests/common/: mod.rs
tests/replication/: Cargo.toml  README.md
tests/sdk/: Cargo.toml  README.md
(+137 files in other folders)
