[package]
name = "cluaizd-ffi"
version = "0.1.0"
edition = "2021"
description = "C-compatible FFI bindings for CLUAIZD — 0ms local access for robots, AI agents, and embedded systems"

# Build as a C-compatible shared library (.dll / .so / .dylib)
[lib]
name = "cluaizd"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cluaizd-types = { path = "../components/cluaizd-types" }
cluaizd-errors = { path = "../components/cluaizd-errors" }
engine-lmdb = { path = "../crates/storage/engine-lmdb" }
bytes = "1.9"
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4"] }
