[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cluaizd-types  = { workspace = true }
cluaizd-errors = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { version = "4.4", features = ["derive"] }
reqwest      = { version = "0.11", features = ["json"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
