[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cluaizd"
path = "src/main.rs"

[dependencies]
cluaizd-types  = { workspace = true }
cluaizd-errors = { workspace = true }
anyhow         = { workspace = true }
clap           = { version = "4.4", features = ["derive"] }
uuid           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { version = "0.8", features = ["preserve_order"] }
engine-lmdb    = { path = "../../crates/storage/engine-lmdb" }
genome         = { path = "../../crates/genome" }
wal            = { path = "../../crates/storage/wal" }
cluaizd-ffi    = { path = "../../ffi" }
dialoguer = "0.12.0"
