[package]
name = "genome"
version = "0.1.0"
edition = "2021"

[dependencies]
cluaizd-types = { workspace = true }
cluaizd-errors = { workspace = true }
rhai = { version = "1.25.1", features = ["serde", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wasmtime = "45.0.1"
dashmap = "6.1"
notify = { version = "6.1", features = ["macos_fsevent"] }
lazy_static = "1.5.0"
tokio = { workspace = true }
bytes.workspace = true
