[package]
name = "cluaizd-server"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
description = "HTTP/gRPC server daemon for Cluaizd CLUAIZD"

[[bin]]
name = "cluaizd-server"
path = "src/main.rs"

[dependencies]
bincode = "1"

# Internal Modules
cluaizd-types = { workspace = true }
cluaizd-errors = { workspace = true }
genome = { workspace = true }
heart = { workspace = true }
engine-lmdb = { path = "../storage/engine-lmdb" }
wal = { path = "../storage/wal" }
cluaizd-index-mvhsnw = { path = "../storage/index-mvhsnw" }
cluaizd-graph-engine = { path = "../storage/graph-engine" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
# HTTP layer
axum         = { version = "0.7", features = ["macros", "multipart", "ws"] }
anyhow       = { workspace = true }
# Hex encoding/decoding for model hashes
hex          = "0.4"
futures-util = { workspace = true }
rhai = { version = "1.25.1", features = ["serde", "sync"] }
wasmtime = "45.0.1"
rand = "0.8"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
base64 = "0.22"
toml = "0.8"
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3"


