[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
criterion = "0.5"
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
