[package]
name = "chaos-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
cluaizd-types = { workspace = true }
chrono = "0.4"
futures-util = "0.3"
