[package]
name = "quality-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
genome = { workspace = true }
cluaizd-types = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
