[package]
name = "engine-lmdb"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
description = "LMDB-backed physical storage engine for Cluaiz CNSDB"

[dependencies]
cnsdb-types  = { workspace = true }
cnsdb-errors = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
bytes        = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
zstd         = { workspace = true }
anyhow       = { workspace = true }
tempfile     = "3.10"
sha2         = { workspace = true }
hex          = { workspace = true }

# LMDB low-level safe Rust bindings
heed = "0.20"
rhai = { version = "1.25.1", features = ["serde", "sync"] }
wasmtime = "45.0.1"
genome = { version = "0.1.0", path = "../../genome" }

