[package]
name = "wal"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
description = "Write-Ahead Log for crash recovery in Cluaiz CNSDB"

[dependencies]
cnsdb-types  = { workspace = true }
cnsdb-errors = { workspace = true }
tokio        = { workspace = true }
bytes        = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
